--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.20)
 project(vegas LANGUAGES CXX C)
 find_package(jsoncpp CONFIG QUIET)
 find_package(JsonCpp CONFIG QUIET)
-find_package(hdf5 CONFIG REQUIRED COMPONENTS CXX)
+find_package(HDF5 CONFIG REQUIRED COMPONENTS CXX)
 set(JSONCPP_TARGET "")
 if (TARGET jsoncpp::jsoncpp)
     set(JSONCPP_TARGET jsoncpp::jsoncpp)
